--- a/fichier/css/style.css
+++ b/fichier/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+
 body {
    font-family: "Nunito Sans", sans-serif;
   color: #444444;
@@ -64,9 +64,8 @@ h1, h2, h3, h4, h5, h6 {
 
 
 #img{
-  border-top:10px solid #CE0033;
-  border-right:10px solid #CE0033;
   border-radius:20px;
+  box-shadow: 10px -7px  #CE0033;
 }
 .back-to-top {
   position: fixed;
@@ -521,6 +520,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 15px auto 0 auto;
   position:relative;
   right:20%;
+  font-family:
 }
 
 @media (min-width: 1024px) {
@@ -577,7 +577,6 @@ h1, h2, h3, h4, h5, h6 {
   color: #444444;
   font-size: 14px;
   background: #CE0033;
-  text-align: center;
 }
 #footer .footer-newsletter {
   padding: 50px 0;
@@ -717,9 +716,7 @@ h1, h2, h3, h4, h5, h6 {
   color:white;
 }
 
-.text-f{
-  opacity: 84%;
-}
+
 
 @media (max-width: 768px) {
   #footer .copyright, #footer .credits {
@@ -769,7 +766,7 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # reglage du footer 
 --------------------------------------------------------------*/
-#footer {
+  #footer {
   background:black;
   padding: 0 0 30px 0;
   color: #444444;
